@@ -13,7 +13,7 @@ FAIL Animation of font-synthesis-style in ::marker assert_true: font-synthesis-s
 FAIL Animation of font-synthesis-weight in ::marker assert_true: font-synthesis-weight doesn't seem to be supported in the computed style expected true got false
 FAIL Animation of font-variant in ::marker assert_equals: expected "small-caps" but got "tabular-nums"
 FAIL Animation of font-variant-caps in ::marker assert_equals: expected "small-caps" but got "normal"
-FAIL Animation of font-variant-east-asian in ::marker assert_equals: expected "full-width" but got "normal"
+PASS Animation of font-variant-east-asian in ::marker
 FAIL Animation of font-variant-ligatures in ::marker assert_equals: expected "historical-ligatures" but got "normal"
 FAIL Animation of font-variant-numeric in ::marker assert_equals: expected "slashed-zero" but got "tabular-nums"
 FAIL Animation of font-variant-position in ::marker assert_equals: expected "sub" but got "normal"
