@@ -257,6 +257,9 @@ PASS font-synthesis: "none" onto "weight style"
 PASS font-variant-alternates (type: discrete) has testAddition function
 FAIL font-variant-alternates: "stylistic(unknown)" onto "swash(unknown)" assert_equals: The value should be stylistic(unknown) at 0ms expected "stylistic(unknown)" but got "normal"
 FAIL font-variant-alternates: "swash(unknown)" onto "stylistic(unknown)" assert_equals: The value should be swash(unknown) at 0ms expected "swash(unknown)" but got "normal"
+PASS font-variant-east-asian (type: discrete) has testAddition function
+PASS font-variant-east-asian: "proportional-width" onto "full-width"
+PASS font-variant-east-asian: "full-width" onto "proportional-width"
 PASS font-variation-settings (type: fontVariationSettings) has testAddition function
 FAIL font-variation-settings with composite type add assert_equals: The value should be "wght" 2.2 at 250ms expected "\"wght\" 2.2" but got "\"wght\" 1.2"
 PASS font-variation-settings (type: discrete) has testAddition function
